# BreakOut

./: .gitignore  build.gradle  gradle.properties  key.jks
app/: build.gradle
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Ball.cpp  Ball.h  BreakoutGame.cpp  BreakoutGame.h  Brick.cpp  Brick.h  BrickGrid.cpp  BrickGrid.h  CMakeLists.txt  EventListener.h  Events.h  GameLoop.cpp  MathHelper.cpp  MathHelper.h  NativeToJavaManager.cpp  Paddle.cpp  Paddle.h
app/src/main/java/com/example/breakout/: AssetHelper.java  InputEventListener.java  InputHandler.java  MainActivity.java  SoundManager.java  YourView.java
app/src/main/res/layout/: activity_game.xml
gradle/wrapper/: gradle-wrapper.properties
